<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white_color"
        android:orientation="vertical">


        <TextView
            android:id="@+id/atoz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Name (A-Z)"
            android:textColor="@color/black_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/rank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Rank"
            android:textColor="@color/black_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bloggers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/all_bloggers"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/experts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/all_experts"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/editors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/all_editors"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/editorialTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/all_editorial"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/featuredAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/all_featured"
            android:textColor="@color/black_color" />
    </LinearLayout>

</RelativeLayout>
