<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/white"
  android:clipToPadding="false"
  app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.mycity4kids.widget.CustomFontTextView
      android:id="@+id/blogger_gold_about_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/space_20"
      android:layout_marginTop="@dimen/space_25"
      android:layout_marginRight="@dimen/space_20"
      android:text="@string/blogger_gold_about_text"
      android:textColor="@color/campaign_515151"
      android:textSize="16sp" />

    <com.mycity4kids.widget.CustomFontTextView
      android:id="@+id/webview_know_more"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/space_20"
      android:text="@string/webview_know_more"
      android:textColor="@color/campaign_list_buttons"
      android:textSize="14sp" />

    <com.mycity4kids.widget.CustomFontTextView
      android:id="@+id/webview_hack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/space_20"
      android:layout_marginTop="@dimen/space_30"
      android:text="@string/webview_hack_text"
      android:textColor="@color/campaign_list_buttons"
      android:textSize="14sp" />

    <com.mycity4kids.widget.CustomFontTextView
      android:id="@+id/webview_terms"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/space_20"
      android:layout_marginTop="@dimen/space_20"
      android:text="@string/webview_term_text"
      android:textColor="@color/campaign_list_buttons"
      android:textSize="14sp" />

    <com.mycity4kids.widget.CustomFontTextView
      android:id="@+id/webview_faq"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/space_20"
      android:layout_marginTop="@dimen/space_20"
      android:text="@string/leaderboard_faq"
      android:textColor="@color/campaign_list_buttons"
      android:textSize="14sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fabwhatsapp"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_gravity="end|bottom"
      android:layout_marginRight="@dimen/space_20"
      android:layout_marginBottom="@dimen/space_20"
      app:backgroundTint="#2cb742"
      app:fab_colorNormal="#2cb742"
      app:fab_colorPressed="#2cb742"
      app:srcCompat="@drawable/ic_leaderboard_whatsapp" />

  </LinearLayout>

</androidx.core.widget.NestedScrollView>