<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white_color">

  <TextView
    android:id="@+id/titleTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:text="@string/invite_friends_follow_you"
    android:textColor="@color/app_light_black"
    android:textSize="22sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/subtitleTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/titleTextView"
    android:layout_marginStart="80dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="80dp"
    android:gravity="center"
    android:text="@string/invite_friends_show_creation"
    android:textColor="@color/app_light_black"
    android:textSize="14sp" />

  <com.mycity4kids.widget.ShareButtonWidget
    android:id="@+id/facebookShareWidget"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/subtitleTextView"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:visibility="gone"
    app:gravity="center"
    app:radius="20dp"
    app:shareBgColor="@color/all_facebook_share"
    app:shareImage="@drawable/ic_facebook_svg"
    app:shareImageTint="@color/white_color"
    app:shareText="@string/invite_friends_facebook"
    app:textSize="16sp" />

  <com.mycity4kids.widget.ShareButtonWidget
    android:id="@+id/contactShareWidget"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/facebookShareWidget"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:gravity="center"
    app:radius="20dp"
    app:shareBgColor="@color/all_phonebook"
    app:shareImage="@drawable/ic_contact"
    app:shareImageTint="@color/white_color"
    app:shareText="@string/all_phone_contact"
    app:textSize="16sp" />

  <com.mycity4kids.widget.ShareButtonWidget
    android:id="@+id/shareLinkWidget"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/contactShareWidget"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:gravity="center"
    app:radius="20dp"
    app:shareBgColor="@color/all_invite_link"
    app:shareImage="@drawable/ic_ss_generic"
    app:shareImageTint="@color/white_color"
    app:shareText="@string/invite_friends_link"
    app:textSize="16sp" />

  <TextView
    android:id="@+id/cancelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/shareLinkWidget"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="40dp"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/cancel"
    android:textColor="@color/app_light_black"
    android:textSize="14sp" />

</RelativeLayout>