<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_shadow_rectangle"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/space_50"
    android:paddingTop="@dimen/space_28"
    android:paddingRight="@dimen/space_50"
    android:paddingBottom="@dimen/space_35">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/proof_submitted_congo_screen" />

    <com.mycity4kids.widget.CustomFontTextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_25"
        android:gravity="center"
        android:text="@string/dialog_proof_submitted_congo_text"
        android:textColor="@color/campaign_515151"
        android:textSize="22sp"
        app:fontName="oswald_regular.ttf" />

    <com.mycity4kids.widget.CustomFontTextView
        android:id="@+id/sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_15"
        android:gravity="center"
        android:text="@string/dialog_register_proof_submitted_text"
        android:textColor="@color/campaign_7D7D7D"
        android:textSize="14sp"

        app:fontName="open_sans.ttf" />


    <com.mycity4kids.widget.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_15"
        android:gravity="center"
        android:text="@string/dialog_share_your_campaign_detail_text"
        android:textColor="@color/app_red"
        android:textSize="14sp"

        app:fontName="open_sans.ttf" />

    <com.mycity4kids.widget.CustomFontTextView
        android:id="@+id/click_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_25"
        android:background="@drawable/campaign_detail_red_bg"
        android:gravity="center"
        android:paddingLeft="@dimen/space_35"
        android:paddingTop="@dimen/space_10"
        android:paddingRight="@dimen/space_35"
        android:paddingBottom="@dimen/space_10"
        android:text="@string/dialog_continue"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        app:fontName="open_sans.ttf" />

</LinearLayout>