<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/custom_dialog_bg"
  android:minWidth="280dp"
  android:orientation="vertical">

  <com.mycity4kids.widget.CustomFontTextView
    android:id="@+id/blockUserTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="12dp"
    android:text="@string/groups.block_member"
    android:textColor="@color/spell_check.black"
    android:textSize="17sp"
    android:visibility="visible"
    app:fontName="oswald.ttf" />

  <com.mycity4kids.widget.CustomFontTextView
    android:id="@+id/deleteCommentTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="12dp"
    android:text="@string/delete_comment"
    android:textColor="@color/spell_check.black"
    android:textSize="17sp"
    app:fontName="oswald.ttf" />

  <com.mycity4kids.widget.CustomFontTextView
    android:id="@+id/editCommentTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="12dp"
    android:text="@string/edit_comment"
    android:textColor="@color/spell_check.black"
    android:textSize="18sp"
    app:fontName="oswald.ttf" />

  <com.mycity4kids.widget.CustomFontTextView
    android:id="@+id/reportCommentTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="12dp"
    android:text="@string/report"
    android:textColor="@color/spell_check.black"
    android:textSize="16sp"
    app:fontName="oswald.ttf" />
</LinearLayout>
